get all students route
