# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\UserController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -14,9 +15,11 @@ Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 
 Route::group(['middleware' => ['auth:sanctum']], function(){
-    //logout
-    Route::group(['middleware' => ['check.role:staff']], function(){
 
-        Route::post('/logout', [AuthController::class, 'logout']);
+    Route::group(['middleware' => ['check.role:staff']], function(){
+        //get all students (paginated)
+        Route::get('/students', [UserController::class, 'getAllStudents']);
     });
+    //logout
+    Route::post('/logout', [AuthController::class, 'logout']);
 });
